# cashlog

./: .coverage  README.md  console-samples.md  main.py  pyproject.toml  test-report.md
cashlog/: __init__.py
cashlog/cli/: main.py  todo_cli.py  transaction_cli.py
cashlog/data/: database.py  models.py
cashlog/service/: todo_service.py  transaction_service.py
tests/: test_database.py  test_todo_service.py  test_transaction_service.py
