[project]
name = "cashlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
]
